--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.8"
+msgpack = "^1.0.8"
 
 [build-system]
 requires = ["poetry-core"]
